fix wonky spacing

--- a/style.css
+++ b/style.css
@@ -191,7 +191,7 @@ footer{
   }
 
   .top-section{
-    padding-top: 150px;
+    padding: 150px 40px 40px 40px;
   }
 }
 
@@ -482,7 +482,6 @@ a:hover{
   background-color: var(--bg-card);
   border-radius: 25px;
   padding: 0 0 30px 0;
-  margin: 10px;
   font-size: small;
   box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.08), 0px 3px 4px rgba(0, 0, 0, 0.1), 0px 1px 4px -1px rgba(0, 0, 0, 0.1);
 
@@ -536,7 +535,7 @@ a:hover{
 .project-container {
   display: grid; 
   gap: 40px;
-  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
 
 .hz-cards-container{
